# python-project-lvl1

./: .gitignore  .travis.yml  Makefile  README.MD  pyproject.toml
brain_games/: cli.py  engine.py  even.py  greeting.py
brain_games/games/: __init__.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/helpers/: calc_result.py  get_gcd.py  is_prime.py  prog_creator.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
kulakoff1988_brain_games.egg-info/: PKG-INFO  SOURCES.txt
kulakoff2803_brain_games.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
