[tool.poetry]
name = "kulakoff2803_brain_games"
version = "0.5.3"
description = "The CLI game"
authors = ["Aleksandr Kulakov <kulakofft4@gmail.com>"]
repository = "https://test.pypi.org/project/kulakoff2803-brain-games/"
packages = [
	{include = "brain_games"}
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
	"Environment :: Console",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: End Users/Desktop",
	"License :: Freeware",
	"Natural Language :: English"
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
